[package]
name = "yabf"
version = "0.1.2"
authors = ["eadf"]
edition = "2018"
description = "yet another bit field"
readme = "README.md"
repository = "https://github.com/eadf/yabf.rs"
license = "MIT OR Apache-2.0"
keywords = ["bitfield"]

[dependencies]
smallvec = { version = "^1.6.1", optional = true }

[[example]]
name = "stress_test"
path = "src/stress_test.rs"

[dev-dependencies]
fnv = "^1.0.7"
rand = "^0.8.3"
rand_chacha = "0.3"
itertools = "0.10"
num-bigint = "0.4"
criterion = "^0.3.4"

[features]
default = ["smallvec"]

[[bench]]
name = "bench"
harness = false
